# multilabelMetrics

./: .gitignore  .travis.yml  Example.ipynb  README.md  pyproject.toml  setup.py
multilabelMetrics/: auxiliar_functions.py  examplebasedclassification.py  examplebasedranking.py  functions.py  labelbasedclassification.py  labelbasedranking.py
tests/: auxiliaryFunctions.py  emotions0.gen  emotions0.train  example.ipynb  results.txt  test_multilabelMetrics.py
