[tool.poetry]
name = "multilabelmetrics"
version = "0.1.0"
description = "Metrics for multilabel classification"
authors = ["Jose Perez-Parras Toledano <joseperezparras95@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
