[tool.poetry]
name = "multilabelMetrics"
version = "0.1.0"
description = "Metrics for multilabel classification"
authors = ["Jose Perez-Parras Toledano <joseperezparras95@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.16"
scikit-multilearn = "^0.2.0"
pytest = "^4.3"
scipy = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
